[package]
name = "rebackup"
description = "A backup software that only builds a list of files to backup using a powerful rule system"
version = "1.0.0"
authors = ["Clément Nerma <clement.nerma@gmail.com>"]
edition = "2018"
repository = "https://github.com/ClementNerma/ReBackup"
license = "Apache-2.0"
keywords = ["backup", "filter"]

[[bin]]
name = "rebackup"
path = "src/bin/rebackup/main.rs"
doc = false
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap", "glob"]

[dependencies]
atomic = "0.5.0"
clap = { version = "3.0.0-beta.2", optional = true }
glob = { version = "0.3.0", optional = true }
lazy_static = "1.4.0"
thiserror = "1.0.24"

[package.metadata.docs.rs]
all-features = true
